--- a/pages/css/styles.css
+++ b/pages/css/styles.css
@@ -7726,6 +7726,12 @@ textarea.form-control-lg {
   padding: 3rem !important;
 }
 
+.p-custom {
+  padding-right: 200px !important;
+  padding-left: 200px !important;
+  padding-bottom: 50px !important;
+}
+
 .px-0 {
   padding-right: 0 !important;
   padding-left: 0 !important;
