--- a/views/about.ejs
+++ b/views/about.ejs
@@ -18,11 +18,11 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="#!" style="font-family: 'Berkshire Swash'">A Little Bit of Grandma</a>
+                <a class="navbar-brand" href="/" style="font-family: 'Berkshire Swash'">A Little Bit of Grandma</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                        <li class="nav-item"><a class="nav-link" href="/index">Shop</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/">Shop</a></li>
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="/about">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
                     </ul>
