--- a/views/index.ejs
+++ b/views/index.ejs
@@ -52,7 +52,7 @@
                     <div class="col mb-5">
                         <div class="card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="https://raw.githubusercontent.com/JakeGillespie1/CraftWebsite/main/20231104_131323.jpg" alt="..." />
+                            <img class="card-img-top" src="/assets/img/zipper_scrunchies.jpg" alt="..." />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -72,7 +72,7 @@
                         <div class="card h-100">
                             
                             <!-- Product image-->
-                            <img class="card-img-top" src="https://raw.githubusercontent.com/JakeGillespie1/CraftWebsite/main/img/PXL_20210505_022327499.jpg" alt="..." />
+                            <img class="card-img-top" src="/assets/img/BabyQuiltH.jpg" alt="..." />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -94,7 +94,7 @@
                         <div class="card h-100">
                             
                             <!-- Product image-->
-                            <img class="card-img-top" src="https://raw.githubusercontent.com/JakeGillespie1/CraftWebsite/main/img/normalscrunchies.jpg" alt="..." />
+                            <img class="card-img-top" src="/assets/img/normalscrunchies.jpg" alt="..." />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -113,7 +113,7 @@
                     <div class="col mb-5">
                         <div class="card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="https://raw.githubusercontent.com/JakeGillespie1/CraftWebsite/main/img/babyboots.jpg" alt="...">
+                            <img class="card-img-top" src="/assets/img/babyboots.jpg" alt="...">
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -135,7 +135,7 @@
                         <div class="col mb-5">
                         <div class="card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="https://raw.githubusercontent.com/JakeGillespie1/CraftWebsite/main/img/20221201_185641.jpg" alt="..." />
+                            <img class="card-img-top" src="/assets/img/book_cozy.jpg" alt="..." />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -155,7 +155,7 @@
                     <div class="col mb-5">
                         <div class="card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="https://raw.githubusercontent.com/JakeGillespie1/CraftWebsite/main/img/4x3%20Logo.png" alt="..." />
+                            <img class="card-img-top" src="/assets/img/4x3 Logo.png" alt="..." />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -175,7 +175,7 @@
                         <div class="card h-100">
                             <!-- Sale badge-->
                             <!-- Product image-->
-                            <img class="card-img-top" src="https://raw.githubusercontent.com/JakeGillespie1/CraftWebsite/main/img/4x3%20Logo.png" alt="..." />
+                            <img class="card-img-top" src="/assets/img/4x3 Logo.png" alt="..." />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -196,7 +196,7 @@
                     <div class="col mb-5">
                         <div class="card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="https://raw.githubusercontent.com/JakeGillespie1/CraftWebsite/main/img/4x3%20Logo.png" alt="..." />
+                            <img class="card-img-top" src="/assets/img/4x3 Logo.png" alt="..." />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
