--- a/views/about.ejs
+++ b/views/about.ejs
@@ -50,7 +50,7 @@
             <div class="container px-5">
                 <div class="row gx-5 align-items-center">
                     <div class="col-lg-6 order-lg-2">
-                        <div class="p-5"><img class="card-img-top" src="https://raw.githubusercontent.com/JakeGillespie1/CraftWebsite/main/img/IMG_3575%20(1).jpg" alt="..." /></div>
+                        <div class="p-5"><img class="card-img-top" src="/assets/img/Sam_Chelsey.jpg" alt="..." /></div>
                     </div>
                     <div class="col-lg-6 order-lg-1">
                         <div class="p-5">
@@ -66,7 +66,7 @@
             <div class="container px-5">
                 <div class="row gx-5 align-items-center">
                     <div class="col-lg-6">
-                        <div class="p-5"><img class="card-img-top" src="https://raw.githubusercontent.com/JakeGillespie1/CraftWebsite/main/img/IMG_20200707_165832%20(1).jpg" alt="..." /></div>
+                        <div class="p-5"><img class="card-img-top" src="/assets/img/Siblings_Quilts.jpg" alt="..." /></div>
                     </div>
                     <div class="col-lg-6">
                         <div class="p-5">
