--- a/views/login.ejs
+++ b/views/login.ejs
@@ -59,7 +59,7 @@
                                 <!-- Nested Row within Card Body -->
                                 <div class="row">
                                     <div class="col-lg-6 d-none d-lg-block bg-login-image">
-                                        <img class="card-img-top" src="https://raw.githubusercontent.com/JakeGillespie1/CraftWebsite/main/img/Untitled%20design%20(2).png" alt="..." />
+                                        <img class="card-img-top" src="/assets/img/1x1 Logo.png" alt="..." />
                                     </div>
                                     
                                     <div class="col-lg-6">
