--- a/views/inheritance_test.ejs
+++ b/views/inheritance_test.ejs
@@ -2,5 +2,5 @@
 
 <% section('content'); %>
     <!-- Specific page content goes here -->
-    <p>This is the content of the page.</p>
+    <p><%= content %></p>
 <% endSection(); %>
