--- a/views/inheritance_test.ejs
+++ b/views/inheritance_test.ejs
@@ -2,5 +2,5 @@
 
 <% section('content'); %>
     <!-- Specific page content goes here -->
-    <p><%= content %></p>
+    <p><%= Content %></p>
 <% endSection(); %>
