--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,10 +27,9 @@
                         <li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
                     </ul>
                     <form class="d-flex">
-                        <button class="btn btn-outline-dark" type="submit">
-                            <i class="bi-cart-fill me-1"></i>
-                            Cart
-                            <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
+                        <button class="btn btn-outline-dark" type="button" href="https://www.teacherspayteachers.com/Store/Chickenloopers-Coop">
+                            Chickenloopers Coop
+                            <i class="bi bi-pencil-fill me-1"></i>
                         </button>
                     </form>
                 </div>
