--- a/views/test.ejs
+++ b/views/test.ejs
@@ -56,7 +56,7 @@
     </header>
     <main>
         <!-- Content of the specific page goes here -->
-        <%= content %>
+        <%= Content %>
     </main>
 
     <footer>
