--- a/views/inheritance_test.ejs
+++ b/views/inheritance_test.ejs
@@ -1,6 +1,6 @@
 <%- include('test.ejs') %>
 
-<% section('content'); %>
+<% section('Content'); %>
     <!-- Specific page content goes here -->
     <p><%= Content %></p>
 <% endSection(); %>
