--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -348,6 +348,26 @@ button:focus:not(:focus-visible) {
   outline: 0;
 }
 
+.button {
+  background-color: #ACD6ED;
+  border: none;
+  border-radius: 100px;
+  color: white;
+  padding: 16px 32px;
+  text-align: center !important;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+}
+
+.button:hover {
+  background-color: #9AC0F9;
+  color: white;
+}
+
 input,
 button,
 select,
@@ -7724,6 +7744,12 @@ textarea.form-control-lg {
 
 .p-5 {
   padding: 3rem !important;
+}
+
+.p-5-custom {
+  padding-top: 3rem !important;
+  padding-right: 3rem !important;
+  padding-left: 3rem !important;
 }
 
 .p-custom {
