--- a/views/about.ejs
+++ b/views/about.ejs
@@ -53,9 +53,12 @@
                         <div class="p-5"><img class="card-img-top" src="/assets/img/Sam_Chelsey.jpg" alt="..." /></div>
                     </div>
                     <div class="col-lg-6 order-lg-1">
-                        <div class="p-5">
+                        <div class="p-5-custom">
                             <h2 class="display-4" style="font-family: 'Berkshire Swash';">About Chelsey</h2>
                             <p style="font-family: 'Times New Roman', serif;">You know those people with so many hobbies they don't know what to do with them all? That is me. I love learning and have found crafting makes me happy. During the years of quarantine, I finally decided it was ok to learn new skills and share them. I didn't have to take an art class to make art. That thought process has expended my previous crafting skills to new levels. From digital products for teaching to memory quilts to zipper scrunchies, there's so much to make and experience. I hope you enjoy them too! </p>
+                        </div>
+                        <div style="padding-left: 45px;">
+                            <button class="button">Chelsey's Instagram</button>
                         </div>
                     </div>
                 </div>
