--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,7 +28,7 @@
                     </ul>
                     <form class="d-flex">
                         <button class="btn btn-outline-dark" type="button" href="https://www.teacherspayteachers.com/Store/Chickenloopers-Coop">
-                            Chickenloopers Coop
+                            Chickenlooper's Coop
                             <i class="bi bi-pencil-fill me-1"></i>
                         </button>
                     </form>
