--- a/views/login.ejs
+++ b/views/login.ejs
@@ -26,13 +26,10 @@
                         <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="/login">Login</a></li>
                     </ul>
-                    <form class="d-flex">
-                        <button class="btn btn-outline-dark" type="submit">
-                            <i class="bi-cart-fill me-1"></i>
-                            Cart
-                            <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
-                        </button>
-                    </form>
+                    <button class="btn btn-outline-dark" type="button" href="https://www.teacherspayteachers.com/Store/Chickenloopers-Coop">
+                        Chickenlooper's Coop
+                        <i class="bi bi-pencil-fill me-1"></i>
+                    </button>
                 </div>
             </div>
         </nav>
