--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,10 +26,12 @@
                         <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
                     </ul>
-                        <button class="btn btn-outline-dark" type="button" href="https://www.teacherspayteachers.com/Store/Chickenloopers-Coop">
+                    <a href="https://www.teacherspayteachers.com/Store/Chickenloopers-Coop">
+                        <button class="btn btn-outline-dark" type="button">
                             Chickenlooper's Coop
                             <i class="bi bi-pencil-fill me-1"></i>
                         </button>
+                    </a>
                 </div>
             </div>
         </nav>
