--- a/views/index.ejs
+++ b/views/index.ejs
@@ -137,7 +137,7 @@
                             </div>
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Coming Soon</a></div>
+                                <div class="text-center"></div>
                             </div>
                         </div>
                     </div>
@@ -156,7 +156,7 @@
                             </div>
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Coming Soon</a></div>
+                                <div class="text-center"></div>
                             </div>
                         </div>
                     
@@ -176,7 +176,7 @@
                             </div>
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Coming Soon</a></div>
+                                <div class="text-center"></div>
                             </div>
                         </div>
                     </div>
