--- a/views/inheritance_test.ejs
+++ b/views/inheritance_test.ejs
@@ -2,5 +2,5 @@
 
 <% section('content', function(){%>
     <!-- Specific page content goes here -->
-    <p><%= content %></p>
+    <p>content of child</p>
 <% });%>
