--- a/views/about.ejs
+++ b/views/about.ejs
@@ -59,6 +59,11 @@
                         <a href="https://instagram.com/alittlebitofgrandma?igshid=NzZlODBkYWE4Ng==">
                             <div style="padding-left: 45px;">
                                 <button class="button">Chelsey's Instagram</button>
+                            
+                        </a>
+                        <a href="https://www.teacherspayteachers.com/Store/Chickenloopers-Coop">
+                            
+                                <button class="button">Chickenlooper's Coop</button>
                             </div>
                         </a>
                     </div>
