--- a/views/login.ejs
+++ b/views/login.ejs
@@ -38,10 +38,6 @@
         <!-- Header-->
         <header class="bg-dark py-5">
             <div class="container px-4 px-lg-5 my-5">
-                <div class="text-center text-white">
-                    <h1 class="display-4" style="font-family: 'Berkshire Swash'; font-size: 80px", cursive;>A Little Bit of Grandma</h1>
-                    <p class="lead fw-normal mb-0" style="font-family: 'Times New Roman', serif; font-size: 30px">Homemade crafts made with love</p>
-                </div>
             </div>
         </header>
         <body class="bg-gradient-primary">
@@ -80,7 +76,7 @@
                                                 </div>
                                                 <br>
                                                 <div style="text-align: center;">
-                                                <a href="index.html" class="button">
+                                                <a href="index.html" class="button" style="width:300px">
                                                     Login
                                                 </a>
                                                 </div>
