--- a/views/index.ejs
+++ b/views/index.ejs
@@ -297,7 +297,7 @@
                     <td><%= reviewData[iCount].id %></td>
                     <td><%= reviewData[iCount].reviewer_name%></td>
                     <td><%= reviewData[iCount].review_text %></td>
-                    <td><%= reviewData[iCount].rating></td>
+                    <td><%= reviewData[iCount].rating%></td>
                 </tr>
                 <% } %>
             </tbody>
