--- a/views/login.ejs
+++ b/views/login.ejs
@@ -54,7 +54,7 @@
                                 <!-- Nested Row within Card Body -->
                                 <div class="row">
                                     <div class="col-lg-6 d-none d-lg-block bg-login-image">
-                                        <img class="card-img-top" src="/assets/img/1x1 Logo.png" alt="..." />
+                                        <img style="width:400px" class="card-img-top" src="/assets/img/1x1 Logo.png" alt="..." />
                                     </div>
                                     
                                     <div class="col-lg-6">
