--- a/views/index.ejs
+++ b/views/index.ejs
@@ -64,6 +64,7 @@
                             <a class="nav-link" href="/login">Login</a>
                         </li>
                     </ul>
+                    <!--Teachers pay teachers site-->
                     <a href="https://www.teacherspayteachers.com/Store/Chickenloopers-Coop">
                         <button class="btn btn-outline-dark" type="button">
                             Chickenlooper's Coop
