--- a/views/login.ejs
+++ b/views/login.ejs
@@ -56,7 +56,7 @@
                                     <div class="col-lg-6 d-none d-lg-block bg-login-image">
                                         <img style="width:400px" class="card-img-top" src="/assets/img/1x1 Logo.png" alt="..." />
                                     </div>
-                                    
+                                    <!--Login stuff-->
                                     <div class="col-lg-6">
                                         <div class="p-5">
                                             <div class="text-center">
