comments on about

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -51,6 +51,7 @@
                     <div class="col-lg-6 order-lg-2">
                         <div class="p-5"><img class="card-img-top" src="/assets/img/Sam_Chelsey.jpg" alt="..." /></div>
                     </div>
+                    <!--About Chelsey-->
                     <div class="col-lg-6 order-lg-1">
                         <div class="p-5-custom">
                             <h2 class="display-4" style="font-family: 'Berkshire Swash';">About Chelsey</h2>
@@ -75,6 +76,7 @@
                     <div class="col-lg-6">
                         <div class="p-5"><img class="card-img-top" src="/assets/img/Siblings_Quilts.jpg" alt="..." /></div>
                     </div>
+                    <!--About Name-->
                     <div class="col-lg-6">
                         <div class="p-5">
                             <h2 class="display-4" style="font-family: 'Berkshire Swash';">About the Name</h2>
