--- a/views/login.ejs
+++ b/views/login.ejs
@@ -62,7 +62,9 @@
                                             <div class="text-center">
                                                 <h1 class="h4 text-gray-900 mb-4">Welcome Back Chelsey!</h1>
                                             </div>
-                                            <form class="user">
+                                            <form class="user"
+                                                action="/userLogin"
+                                                method="post">
                                                 <div>
                                                     <input type="email" class="form-control form-control-user"
                                                         id="exampleInputEmail" aria-describedby="emailHelp"
