--- a/views/index.ejs
+++ b/views/index.ejs
@@ -69,15 +69,6 @@
                         <button class="btn btn-outline-dark" type="button">
                             Chickenlooper's Coop
                             <i class="bi bi-pencil-fill me-1"></i>
-                    <form class="d-flex">
-                        <button class="btn btn-outline-dark" type="submit">
-                            <i class="bi-cart-fill me-1"></i>
-                            Cart
-                            <span
-                                class="badge bg-dark text-white ms-1 rounded-pill"
-                                >0</span
-                            >
-                        </button>
                     </a>
                 </div>
             </div>
@@ -219,7 +210,7 @@
                             </div>
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Coming Soon</a></div>
+                                <div class="text-center"></div>
                             </div>
                         </div>
                     </div>
@@ -243,7 +234,7 @@
                             </div>
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Coming Soon</a></div>
+                                <div class="text-center"></div>
                             </div>
                         </div>
                     </div>
@@ -267,7 +258,7 @@
                             </div>
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Coming Soon</a></div>
+                                <div class="text-center"></div>
                             </div>
                         </div>
                     </div>
