--- a/views/product.ejs
+++ b/views/product.ejs
@@ -110,7 +110,7 @@
         <body class="bg-gradient-primary">
             <div class="container-custom">
                 <div class="left-column-custom">
-
+                    <img src="/assets/img/BabyQuiltH.jpg">
                 </div>
                 <div class="right-column-custom">
 
