--- a/views/inheritance_test.ejs
+++ b/views/inheritance_test.ejs
@@ -1,6 +1,7 @@
-<%- include('test.ejs') %>
+<%- include('Head') %>
+<%- include('Navigation') %>
+<%- include('Header') %>
 
-<% section('content', function(){%>
-    <!-- Specific page content goes here -->
-    <p>content of child</p>
-<% });%>
+<p>Hi</p>
+
+<%- include('Footer') %>
