--- a/views/product.ejs
+++ b/views/product.ejs
@@ -110,10 +110,19 @@
         <body class="bg-gradient-primary">
             <div class="container-custom">
                 <div class="left-column-custom">
-                    <img src="/assets/img/BabyQuiltH.jpg">
+                    <img src="/assets/img/BabyQuiltH.jpg" alt="product">
                 </div>
                 <div class="right-column-custom">
-
+                    <div class="product-description">
+                        <span>Hand-made</span>
+                        <h1>Product Name</h1>
+                        <p>The preferred choice of a vast range of acclaimed DJs. Punchy, bass-focused sound and high isolation. Sturdy headband and on-ear cushions suitable for live performance</p>
+                    </div>
+                    <div class="product-price">
+                        <span>Insert Price</span>
+                        <button href="#" class="button
+                        ">Leave a Review</button>
+                    </div>
                 </div>
             </div>
         </body>
