--- a/views/product.ejs
+++ b/views/product.ejs
@@ -110,7 +110,7 @@
         <body class="bg-gradient-primary">
             <div class="container-custom">
                 <div class="left-column-custom">
-                    <img src="/assets/img/BabyQuiltH.jpg" alt="product">
+                    <img src="/assets/img/4x3 Logo.png" alt="product"/>
                 </div>
                 <div class="right-column-custom">
                     <div class="product-description">
@@ -120,6 +120,7 @@
                     </div>
                     <div class="product-price">
                         <span>Insert Price</span>
+                        <br>
                         <button href="#" class="button
                         ">Leave a Review</button>
                     </div>
