--- a/views/Navigation.ejs
+++ b/views/Navigation.ejs
@@ -8,7 +8,7 @@
             >A Little Bit of Grandma</a
         >
         <div
-            class="collapse navbar-collapse"
+            class="collapse navbar-collapse show"
             id="navbarSupportedContent"
         >
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
@@ -32,6 +32,7 @@
                 <button class="btn btn-outline-dark" type="button">
                     Chickenlooper's Coop
                     <i class="bi bi-pencil-fill me-1"></i>
+                </button>
             </a>
         </div>
     </div>
