--- a/views/index.ejs
+++ b/views/index.ejs
@@ -69,6 +69,7 @@
                         <button class="btn btn-outline-dark" type="button">
                             Chickenlooper's Coop
                             <i class="bi bi-pencil-fill me-1"></i>
+                        </button>
                     </a>
                 </div>
             </div>
