--- a/views/product.ejs
+++ b/views/product.ejs
@@ -110,7 +110,7 @@
         <body class="bg-gradient-primary">
             <div class="container-custom">
                 <div class="left-column-custom">
-                    <img src="/assets/img/4x3 Logo.png" alt="product"/>
+                    <img src="/assets/img/babyboots.jpg" style="padding-right: 1rem" class="active" alt="product"/>
                 </div>
                 <div class="right-column-custom">
                     <div class="product-description">
