--- a/views/Footer.ejs
+++ b/views/Footer.ejs
@@ -1,7 +1,14 @@
-<div class="container">
-    <footer onload="getDate();">
-        <!-- Common footer content goes here -->
-        <p id="Copyright">&copy; 2023 A little bit of grandma</p>
-    </footer>
-</div>
+        <!-- Footer-->
+        <footer class="py-5 bg-dark">
+            <div class="container">
+                <p class="m-0 text-center text-white">
+                    Copyright &copy; A Little Bit of Grandma 2023
+                </p>
+            </div>
+        </footer>
+        <!-- Bootstrap core JS-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- Core theme JS-->
+        <script src="js/scripts.js"></script>
+    </body>
 </html>
