Added leave review button

--- a/views/product.ejs
+++ b/views/product.ejs
@@ -119,10 +119,11 @@
                         <p>The preferred choice of a vast range of acclaimed DJs. Punchy, bass-focused sound and high isolation. Sturdy headband and on-ear cushions suitable for live performance</p>
                     </div>
                     <div class="product-price">
-                        <span>Insert Price</span>
-                        <br>
-                        <button href="#" class="button
-                        ">Leave a Review</button>
+                        <span>$Insert Price</span>
+                        <br><br>
+                        <a href="leaveReview">
+                            <button class="button" type="button">Leave a Review</button>
+                        </a>
                     </div>
                 </div>
             </div>
