--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,175 +1,174 @@
-<%- include('Head') %>
-<%- include('Navigation') %>
-<%- include('Header') %>
+<%- include('Head') %> <%- include('Navigation') %> <%- include('Header') %>
 
-        <!-- Section-->
-        <section class="py-5">
-            <div class="container px-4 px-lg-5 mt-5">
-                <div
-                    class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center"
-                >
-                    <div class="col mb-5">
-                        <div class="card h-100">
-                            <!-- Product image-->
-                            <img
-                                class="card-img-top"
-                                src="/assets/img/zipper_scrunchies.jpg"
-                                alt="..."
-                            />
-                            <!-- Product details-->
-                            <div class="card-body p-4">
-                                <div class="text-center">
-                                    <!-- Product name-->
-                                    <h5 class="fw-bolder">Zipper Scrunchies</h5>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col mb-5">
-                        <div class="card h-100">
-                            <!-- Product image-->
-                            <img
-                                class="card-img-top"
-                                src="/assets/img/BabyQuiltH.jpg"
-                                alt="..."
-                            />
-                            <!-- Product details-->
-                            <div class="card-body p-4">
-                                <div class="text-center">
-                                    <!-- Product name-->
-                                    <h5 class="fw-bolder">Baby Quilts</h5>
-                                    <!-- Product reviews-->
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col mb-5">
-                        <div class="card h-100">
-                            <!-- Product image-->
-                            <img
-                                class="card-img-top"
-                                src="/assets/img/normalscrunchies.jpg"
-                                alt="..."
-                            />
-                            <!-- Product details-->
-                            <div class="card-body p-4">
-                                <div class="text-center">
-                                    <!-- Product name-->
-                                    <h5 class="fw-bolder">Normal Scrunchies</h5>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col mb-5">
-                        <div class="card h-100">
-                            <!-- Product image-->
-                            <img
-                                class="card-img-top"
-                                src="/assets/img/babyboots.jpg"
-                                alt="..."
-                            />
-                            <!-- Product details-->
-                            <div class="card-body p-4">
-                                <div class="text-center">
-                                    <!-- Product name-->
-                                    <h5 class="fw-bolder">Baby Boots</h5>
-                                    <!-- Product reviews-->
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col mb-5">
-                        <div class="card h-100">
-                            <!-- Product image-->
-                            <img
-                                class="card-img-top"
-                                src="/assets/img/book_cozy.jpg"
-                                alt="..."
-                            />
-                            <!-- Product details-->
-                            <div class="card-body p-4">
-                                <div class="text-center">
-                                    <!-- Product name-->
-                                    <h5 class="fw-bolder">Book Cozy</h5>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col mb-5">
-                        <div class="card h-100">
-                            <!-- Product image-->
-                            <img
-                                class="card-img-top"
-                                src="/assets/img/4x3 Logo.png"
-                                alt="..."
-                            />
-                            <!-- Product details-->
-                            <div class="card-body p-4">
-                                <div class="text-center">
-                                    <!-- Product name-->
-                                    <h5 class="fw-bolder">
-                                        Product Coming Soon!
-                                    </h5>
-                                </div>
-                            </div>
-                            <!-- Product actions-->
-                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col mb-5">
-                        <div class="card h-100">
-                            <!-- Sale badge-->
-                            <!-- Product image-->
-                            <img
-                                class="card-img-top"
-                                src="/assets/img/4x3 Logo.png"
-                                alt="..."
-                            />
-                            <!-- Product details-->
-                            <div class="card-body p-4">
-                                <div class="text-center">
-                                    <!-- Product name-->
-                                    <h5 class="fw-bolder">
-                                        Product Coming Soon!
-                                    </h5>
-                                </div>
-                            </div>
-                            <!-- Product actions-->
-                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col mb-5">
-                        <div class="card h-100">
-                            <!-- Product image-->
-                            <img
-                                class="card-img-top"
-                                src="/assets/img/4x3 Logo.png"
-                                alt="..."
-                            />
-                            <!-- Product details-->
-                            <div class="card-body p-4">
-                                <div class="text-center">
-                                    <!-- Product name-->
-                                    <h5 class="fw-bolder">
-                                        Product Coming Soon!
-                                    </h5>
-                                    <!-- Product reviews-->
-                                </div>
-                            </div>
-                            <!-- Product actions-->
-                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"></div>
-                            </div>
+<!-- Section-->
+<section class="py-5">
+    <div class="container px-4 px-lg-5 mt-5">
+        <div
+            class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center"
+        >
+            <div class="col mb-5">
+                <div class="card h-100">
+                    <!-- Product image-->
+                    <img
+                        class="card-img-top"
+                        src="/assets/img/zipper_scrunchies.jpg"
+                        alt="..."
+                    />
+                    <!-- Product details-->
+                    <div class="card-body p-4">
+                        <div class="text-center">
+                            <!-- Product name-->
+                            <h5 class="fw-bolder">Zipper Scrunchies</h5>
                         </div>
                     </div>
                 </div>
             </div>
-        </section>
+            <div class="col mb-5">
+                <div class="card h-100">
+                    <!-- Product image-->
+                    <img
+                        class="card-img-top"
+                        src="/assets/img/BabyQuiltH.jpg"
+                        alt="..."
+                    />
+                    <!-- Product details-->
+                    <div class="card-body p-4">
+                        <div class="text-center">
+                            <!-- Product name-->
+                            <h5 class="fw-bolder">Baby Quilts</h5>
+                            <!-- Product reviews-->
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col mb-5">
+                <div class="card h-100">
+                    <!-- Product image-->
+                    <img
+                        class="card-img-top"
+                        src="/assets/img/normalscrunchies.jpg"
+                        alt="..."
+                    />
+                    <!-- Product details-->
+                    <div class="card-body p-4">
+                        <div class="text-center">
+                            <!-- Product name-->
+                            <h5 class="fw-bolder">Normal Scrunchies</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col mb-5">
+                <a href="product/1">
+                    <div class="card h-100" id="1" name="1">
+                        <!-- Product image-->
+                        <img
+                            class="card-img-top"
+                            src="/assets/img/babyboots.jpg"
+                            alt="..."
+                        />
+                        <!-- Product details-->
+                        <div class="card-body p-4">
+                            <div class="text-center">
+                                <!-- Product name-->
+                                <h5 class="fw-bolder">Baby Boots</h5>
+                                <!-- Product reviews-->
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
 
+            <div class="col mb-5">
+                <div class="card h-100">
+                    <!-- Product image-->
+                    <img
+                        class="card-img-top"
+                        src="/assets/img/book_cozy.jpg"
+                        alt="..."
+                    />
+                    <!-- Product details-->
+                    <div class="card-body p-4">
+                        <div class="text-center">
+                            <!-- Product name-->
+                            <h5 class="fw-bolder">Book Cozy</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col mb-5">
+                <div class="card h-100">
+                    <!-- Product image-->
+                    <img
+                        class="card-img-top"
+                        src="/assets/img/4x3 Logo.png"
+                        alt="..."
+                    />
+                    <!-- Product details-->
+                    <div class="card-body p-4">
+                        <div class="text-center">
+                            <!-- Product name-->
+                            <h5 class="fw-bolder">Product Coming Soon!</h5>
+                        </div>
+                    </div>
+                    <!-- Product actions-->
+                    <div
+                        class="card-footer p-4 pt-0 border-top-0 bg-transparent"
+                    >
+                        <div class="text-center"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="col mb-5">
+                <div class="card h-100">
+                    <!-- Sale badge-->
+                    <!-- Product image-->
+                    <img
+                        class="card-img-top"
+                        src="/assets/img/4x3 Logo.png"
+                        alt="..."
+                    />
+                    <!-- Product details-->
+                    <div class="card-body p-4">
+                        <div class="text-center">
+                            <!-- Product name-->
+                            <h5 class="fw-bolder">Product Coming Soon!</h5>
+                        </div>
+                    </div>
+                    <!-- Product actions-->
+                    <div
+                        class="card-footer p-4 pt-0 border-top-0 bg-transparent"
+                    >
+                        <div class="text-center"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="col mb-5">
+                <div class="card h-100">
+                    <!-- Product image-->
+                    <img
+                        class="card-img-top"
+                        src="/assets/img/4x3 Logo.png"
+                        alt="..."
+                    />
+                    <!-- Product details-->
+                    <div class="card-body p-4">
+                        <div class="text-center">
+                            <!-- Product name-->
+                            <h5 class="fw-bolder">Product Coming Soon!</h5>
+                            <!-- Product reviews-->
+                        </div>
+                    </div>
+                    <!-- Product actions-->
+                    <div
+                        class="card-footer p-4 pt-0 border-top-0 bg-transparent"
+                    >
+                        <div class="text-center"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
 <%- include('Footer') %>
