--- a/views/Navigation.ejs
+++ b/views/Navigation.ejs
@@ -25,7 +25,7 @@
                     <a class="nav-link" href="/about">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/login">Login</a>
+                    <a class="nav-link" href="/adminlogin">Login</a>
                 </li>
             </ul>
             <!--Teachers pay teachers site-->
