leave review started

--- a/views/leaveReview.ejs
+++ b/views/leaveReview.ejs
@@ -1,9 +1,15 @@
 <%- include('Head') %>
 <%- include('Navigation') %>
 <%- include('Header') %>
-        <!-- Section 1-->
+        <!-- Section 1 (how do i center this??)-->
         <section>
-            <h1>Please let us know how you feel!</h1>
+            <div class="container px-5">
+                <div class="row gx-5 align-items-center">
+                    <div class="col-lg-6 order-lg-2">
+                        <h2 class="display-4" style="font-family: 'Berkshire Swash';">Leave a Review</h2>
+                    </div>
+                </div>
+            </div>
         </section>
         <!-- Section 2-->
         <section>
