--- a/views/Head.ejs
+++ b/views/Head.ejs
@@ -7,7 +7,7 @@
         <meta name="author" content="" />    
         <title>A Little Bit of Grandma</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/C:\Users\jakeg\OneDrive\Documents\INTEX_F23\PROJECT3\CraftWebsite\public\assets\spool-of-thread.png" />
+        <link rel="icon" type="image/x-icon" href="favicon.ico" />
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
