trying to figure out review page

--- a/views/leaveReview.ejs
+++ b/views/leaveReview.ejs
@@ -3,12 +3,8 @@
 <%- include('Header') %>
         <!-- Section 1 (how do i center this??)-->
         <section>
-            <div class="container px-5">
-                <div class="row gx-5 align-items-center">
-                    <div class="col-lg-6 order-lg-2">
+            <div>
                         <h2 class="display-4" style="font-family: 'Berkshire Swash';">Leave a Review</h2>
-                    </div>
-                </div>
             </div>
         </section>
         <!-- Section 2-->
